--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -1,3 +1,11 @@
+/* utilidades */
+  .mrr20{
+    margin-right: 20%;
+  }
+  .mt40{
+    margin-top:40px
+  }
+/* utilidades */
 body{
   font-family: 'DM Sans', sans-serif;
   font-style: normal;
@@ -81,7 +89,6 @@ body{
     width: 100%;
     height: 747px;
     background-color: #3E70D9;
-    border-bottom: 1px solid black;
   }
 
   .text-desk{
@@ -126,7 +133,7 @@ body{
     width: 241px;
     font-size: 14px;
     margin-left: 17px;
-    margin-top: 12px;
+    margin-top: 20px;
     font-weight: 700;
   }
 
@@ -148,30 +155,113 @@ body{
     top: 134px;
     left: 101px;
   }
+  
+  .info-p-bloque-div{
+    position: relative;
+    top: 194px;
+    left: 100px;
+    color: white;
+    font-size: 20px;
+    line-height: 105.5%;
+    font-style: normal;
+    font-weight: normal;
+  }
+  .widht-text{
+    width: 243px;
+  }
 
 /* FIN Primer bloque */
 /* --------------------------------------------------------------------------------------------------------------- */
 /* Segundo bloque */
-
-  .est1{
-    width: 104%;
-    padding-top: 94px;
+  .est1-title{
+    margin-left: 90px;
+    margin-top: 101px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 42px;
+    line-height: 55px;
+    color: #000000;
   }
-  .est2{
-    width: 102%;
+  
+  .trans{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 28px;
+  line-height: 36px;
+  color: #000000;
+  margin-top: 33px;
+  margin-left: 90px;
+  }
+  .center-flex{
+    margin-left: 21%;
+  }
+  .est1-p{
+    width: 395px;
+    margin-left: 90px;
+    margin-top: 30px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 21px;
+    color: #969696;
+  }
+  .est-1-div{
+    height: 711px;
+  }
+  .est1-img{
+    width: 103%;
+    margin-top: -107px;
+  }
+  
+  .estadisticas2-bg{
+    background-image: url("../img/estadisticas2.svg");
+    background-repeat: no-repeat;
+    height: 711px;
+    background-size: cover ;
+  }
+
+  .est2-title{
+    width: 70%;
+    margin-left: 17%;
+    margin-top: 98px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 36px;
+    text-align: center;
+    color: #FFFFFF;
+  }
+  .est2-porcentajes{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 56px;
+    line-height: 73px;
+    color: #FFFFFF;
+  }
+  .est2-text{   
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 21px;
+    color: #FFFFFF;
+    text-align: center;
+    margin-top: -17px;
   }
 
 /* FIN Segundo bloque */
 /* --------------------------------------------------------------------------------------------------------------- */
 
-/* Segundo bloque */
+/* tercer bloque */
  
   .ventajasimg{
-    width: 102%;
-    margin-left: -21px;
+    width: 100%;
  }
+ .ventajasimg-mobile{
+   margin-top: 561px;
+}
 
-/* FIN Segundo bloque */
+/* FIN tercer bloque */
 
 /* --------------------------------------------------------------------------------------------------------------- */
 /* Cuarto bloque */
@@ -186,13 +276,27 @@ body{
   margin-top: 40px;
 }
 .detail-btn{
-  font-family: DM Sans;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 26px;
   text-align: center;
   text-decoration-line: underline;
+}
+
+.detail-process{
+  font-size: 32px;
+  line-height: 42px;
+  margin-left: 10px;
+  color: #0099FF;
+}
+
+.btn-list-opt{
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 105.2%;
+/* or 21px */ 
 }
 
 /* FIN cuarto bloque */
