--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -3,7 +3,7 @@
     margin-right: 20%;
   }
   .mt40{
-    margin-top:40px
+    margin-top:60px
   }
 /* utilidades */
 body{
@@ -216,7 +216,7 @@ body{
   .estadisticas2-bg{
     background-image: url("../img/estadisticas2.svg");
     background-repeat: no-repeat;
-    height: 711px;
+    height: auto;
     background-size: cover ;
   }
 
@@ -273,7 +273,6 @@ body{
   line-height: 42px;
   text-align: center;
   color: black;
-  margin-top: 40px;
 }
 .detail-btn{
   font-style: normal;
@@ -301,3 +300,68 @@ body{
 
 /* FIN cuarto bloque */
 
+/* Quinto bloque */
+  .inf-sobre-btn-title{
+    font-weight: normal;
+    font-size: 42px;
+    line-height: 55px;
+    color: #000000;
+    margin-top: 210px;
+    width: 78%;
+    margin-left: 18%;
+  }
+
+  .inf-sobre-btn-p{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 21px;
+    color: #969696;
+    margin-top: 33px;
+    margin-left: 19%;
+    width: 61%;
+  }
+  
+  
+  .background-img-div{
+    background-image: url("../img/time-arr.svg");
+    background-repeat: no-repeat;
+    height: 813px;
+    background-size: cover ;
+    width: 100%;
+    object-fit: cover;
+  }
+  @media (max-width: 991px) { 
+    .background-img-div {
+      background-image: url("../img/mobile/check-mobile.svg");
+      margin-top: 80px;}
+  }
+  .btn-res{
+    background: #0099FF;
+    position: relative;
+    padding: 17px;
+    font-size: 14px;
+    text-align: center;
+    color: #FFFFFF;
+    top: 25px;
+    left: 18%;
+    border-radius: 67px;
+    padding-left: 38px;
+    padding-right: 38px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+  }
+/* FIN Quinto bloque */
+
+/* Sexto bloque */
+
+  .proyect-bg-mobile{
+    width: 110%;
+    margin-left: -18px;
+  }
+  .proyect-bg-img{
+    background-image: url("../img/proyecto.svg"); 
+    width: 100%; 
+    height:464px; 
+    background-size: 100%
+  }
+/* FIN Sexto bloque */
