--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -365,3 +365,71 @@ body{
     background-size: 100%
   }
 /* FIN Sexto bloque */
+
+/* SEPTIMO bloque (FORMULARIO) */
+  .contact-title{
+    margin-top: 100px;
+    font-size: 32px;
+    line-height: 42px;
+    color: #000000;
+    width: 35%;
+    margin-left: 36%;
+  }
+  .form-container{
+    padding-left: 36%;
+    padding-right: 34%
+  }
+  .mensaje{
+    padding-bottom: 154px;
+    padding-top: 25px;
+  }
+  .label-2{
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 23px;
+    color: #424242;
+    margin-bottom: 4px;
+  }
+  .btn-form-new{
+    width: 262px;
+    margin-left: 20%;
+    height: 47px;
+    left: 577px;
+    top: 5878px;
+    background:#0099FF!important;
+    border-radius: 65px;
+    color: #FFFFFF;
+    text-align: center;
+  }
+  .partnerships{
+    font-size: 28px;
+    line-height: 36px;
+    text-align: center;
+    color: #000000;
+    margin-top: 100px;
+    width: 39%;
+    margin-left: 32%;
+  }
+/* FIN SEPTIMO bloque */
+
+/* Footer */
+  .linea-separadora{
+    margin-top: 100px;
+    width: 96%;
+    height: 1px;
+    background: #969696;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
+
+  .footer-text{
+  font-size: 16px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  color: #969696;
+  margin-top: 20px;
+  }
+/* FIN Footer */
