--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -330,11 +330,7 @@ body{
     width: 100%;
     object-fit: cover;
   }
-  @media (max-width: 991px) { 
-    .background-img-div {
-      background-image: url("../img/mobile/check-mobile.svg");
-      margin-top: 80px;}
-  }
+
   .btn-res{
     background: #0099FF;
     position: relative;
@@ -433,3 +429,45 @@ body{
   margin-top: 20px;
   }
 /* FIN Footer */
+
+/* MEDIA QUERY MOBILE */
+@media (max-width: 991px) { 
+  .est1-p{
+    width: 227px;
+  }
+  .est2-porcentajes{
+    font-size: 26px;
+  }
+  .borrar-div{
+    display:none
+  }
+  .background-img-div {
+    background-image: url("../img/mobile/check-mobile.svg");
+    margin-top: 80px;
+  }
+  .btn-form-new{
+
+  }
+  .inf-sobre-btn-title{
+    font-weight: normal;
+    font-size: 28px;
+    color: #000000;
+    margin-top: 60px;
+    width: 80%;
+    margin-left: 10%;
+  }
+  .contact-title{
+    margin-top: 20px;
+    font-size: 20px;
+    line-height: 28px;
+    color: #000000;
+    width: 67%;
+    margin-left: 16%;
+    text-align: center;
+  }
+  .form-container {
+    padding-left: 4%;
+    padding-right: 4%;
+  }
+}
+
