--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -149,7 +149,7 @@ body{
     border-radius: 90px;
   }
 
-  .phone-pow-desk{
+  .phone-pow{
     position: relative;
     width: 476px;
     top: 134px;
@@ -258,6 +258,7 @@ body{
     width: 100%;
  }
  .ventajasimg-mobile{
+    width: 100%;
     margin-top: 170px;
 }
 
@@ -404,7 +405,8 @@ body{
     line-height: 36px;
     text-align: center;
     color: #000000;
-    margin-top: 100px;
+    padding-top: 100px;
+    margin-top: 10px;
     width: 39%;
     margin-left: 32%;
   }
@@ -417,7 +419,6 @@ body{
 
 /* Footer */
   .linea-separadora{
-    margin-top: 100px;
     width: 96%;
     height: 1px;
     background: #969696;
@@ -435,8 +436,69 @@ body{
   }
 /* FIN Footer */
 
+/* ------------------------------------------------------------------------------------------------------ */
 /* MEDIA QUERY MOBILE */
 @media (max-width: 991px) { 
+  .div-azul{
+    height: 1011px;
+  }
+  .phone-pow {
+    position: relative;
+    width: 80%;
+    top: 114px;
+    left: 11%;
+  }
+  .text-principal{
+    color: white;
+    position: relative;
+    top: 127px;
+    left: 14px;
+    font-size: 35px;
+  }
+  .autogestionable {
+    color: white;
+    position: relative;
+    top: 131px;
+    font-size: 35px;
+    border: 2px solid;
+    width: 304px;
+    padding-left: 22px;
+    border-radius: 90px;
+    left: 0;
+  }
+  .porcentaje {
+    color: white;
+    background: #0099FF;
+    width: 109%;
+    border-radius: 0;
+    padding-left: 23px;
+    position: relative;
+    top: 80px;
+    left: -20px;
+  }
+  #flechita {
+    position: relative;
+    left: 289px;
+    top: 66px;
+    width: 65px;
+  }
+  .info-p-bloque-div {
+    position: relative;
+    top: 112px;
+    left: 10px;
+    color: white;
+    font-size: 16px;
+    line-height: 105.5%;
+    font-style: normal;
+    font-weight: normal;
+  }
+  .widht-text {
+    width: 221px;
+    margin-top: 10px;
+  }
+  .circulo-blanco{
+    margin-top: 23px;
+  }
   .est1-title{
     font-size: 26px;
     line-height: 34px;
@@ -486,7 +548,7 @@ body{
     color: #000000;
     margin-top: 60px;
     width: 80%;
-    margin-left: 10%;
+    margin-left: 6%;
   }
   .contact-title{
     margin-top: 20px;
@@ -509,6 +571,14 @@ body{
     color: #969696;
     margin-left: 6%;
   }
+  .btn-res {
+    left: 5%;
+  }
+
+  .btn-form-new{
+    margin-left: 12%;
+  }
+
   .partnerships {
     font-size: 24px;
     text-align: center;
@@ -519,5 +589,9 @@ body{
   }
   .como-funciona{
     margin-top: 50px;
+  }
+  .footer-text{
+    display: block;
+    margin-top: 0px;
   }
 }
