--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -5,6 +5,10 @@
   .mt40{
     margin-top:60px
   }
+  .top-35{
+    position: relative;
+    top:35%;
+  }
 /* utilidades */
 body{
   font-family: 'DM Sans', sans-serif;
@@ -254,12 +258,36 @@ body{
 
 /* tercer bloque */
  
-  .ventajasimg{
+  .ventajas-div{
+    background-color: #F7F9FB;
     width: 100%;
+    height: 486px;
+    position: relative;
+ }
+ .vent-desk-title{
+  position: relative;
+  top: 20%;
+  font-size: 32px;
+  line-height: 42px;
+  text-align: center;
+  color: #000000;
+ }
+ .vent-desk-p{
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 29px;
+  text-align: center;
+  color: #000000;
+  width: 70%;
+ }
+ .vent-img{
+  position: relative;
+  left: 28%;
+  margin-bottom: 14px;
  }
  .ventajasimg-mobile{
     width: 100%;
-    margin-top: 170px;
+    margin-top: 184px;
 }
 
 /* FIN tercer bloque */
@@ -307,7 +335,7 @@ body{
     font-size: 42px;
     line-height: 55px;
     color: #000000;
-    margin-top: 210px;
+    margin-top: 32%;
     width: 78%;
     margin-left: 18%;
   }
@@ -330,6 +358,32 @@ body{
     background-size: cover ;
     width: 100%;
     object-fit: cover;
+  }
+  .background-img-preguntas-frec{
+    background-image: url("../img/background-div-desk.svg");
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 813px;
+    background-size: cover;
+  }
+  .preguntas-f-title{
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 36px;
+    color: #FFFFFF;
+  }
+  .preguntas-f-p{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 21px;
+    color: #FFFFFF;
+    margin-top: 15px;
+    margin-bottom: 30px;
+  }
+  .preguntas-frecuentes-div{
+    width: 75%;
+    margin-top: 20%;
+    margin-left: 18%;
   }
 
   .btn-res{
@@ -355,11 +409,43 @@ body{
     width: 100%;
     
   }
-  .proyect-bg-img{
-    background-image: url("../img/proyecto.svg"); 
+  .proyect-bg-blue{
+    background-color: #3E70D9;; 
     width: 100%; 
     height:464px; 
-    background-size: 100%
+  }
+  .proyects-title{
+    font-size: 42px;
+    line-height: 55px;
+    color: #FFFFFF;
+    width: 487px;
+    margin-top: 98px;
+    margin-left: 19%;
+  }
+  .proyects-p{
+    font-size: 16px;
+    width: 344px;
+    line-height: 21px;
+    color: #FFFFFF;
+    margin-left: 19%;
+    margin-top: 40px;
+  }
+  .proyect-list-item{
+    font-size: 22px;
+    line-height: 29px;
+    color: #FFFFFF;
+    margin-bottom: 32px;
+    margin-left: 3%
+  }
+  .center-list{
+    margin-top: 117px;
+    margin-left: 20%;
+  }
+  .proyects-circle{
+    width: 30px;
+    height: 30px;
+    border: 2px solid white;
+    border-radius: 60px;
   }
 /* FIN Sexto bloque */
 
@@ -437,7 +523,7 @@ body{
 /* FIN Footer */
 
 /* ------------------------------------------------------------------------------------------------------ */
-/* MEDIA QUERY MOBILE */
+/* MEDIA QUERY MOBILE NML*/
 @media (max-width: 991px) { 
   .div-azul{
     height: 1011px;
@@ -510,7 +596,7 @@ body{
     margin-left: 5%;
   }
   .est1-p{
-    width: 309px;
+    width: 287px;
     font-size: 16px;
     margin-left: 6%;
     margin-bottom: 72px;
@@ -537,9 +623,31 @@ body{
     background-color: black!important;
     margin-left: 0!important;
   }
-  .background-img-div {
-    background-image: url("../img/mobile/check-mobile.svg");
-    margin-top: 80px;
+ 
+  .preguntas-f-title{
+    font-weight: normal;
+    color: #FFFFFF;
+    font-size: 18px;
+    line-height: 26px;
+  }
+  
+  .preguntas-frecuentes-div{
+    width: 77%;
+    margin-top: 21%;
+    margin-left: 13%;
+  }
+
+  .background-img-preguntas-frec{
+    margin-top: 120px;
+  }
+  .preguntas-f-p{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 21px;
+    margin-top: 20px;
+    margin-bottom: 60px;
+    color: #FFFFFF;
   }
   .inf-sobre-btn-title{
     font-weight: normal;
@@ -549,6 +657,9 @@ body{
     margin-top: 60px;
     width: 80%;
     margin-left: 6%;
+  }
+  .ventajas-div{
+    display: none!important;
   }
   .contact-title{
     margin-top: 20px;
@@ -593,5 +704,41 @@ body{
   .footer-text{
     display: block;
     margin-top: 0px;
+  }
+}
+/* MEDIA QUERY MOBILE EXTRA SMALL*/
+@media (max-width: 360px){
+  .text-principal{
+    font-size: 27px;
+  }
+  .autogestionable{
+    color: white;
+    position: relative;
+    top: 131px;
+    font-size: 27px;
+    border: 2px solid;
+    width: 262px;
+    padding-left: 24px;
+    border-radius: 90px;
+    left: 0;
+  }
+
+  #flechita{
+    position: relative;
+    left: 240px;
+    top: 73px;
+    width: 65px;
+  }
+  .porcentaje{
+    width: 112%;
+  }
+  .est2-porcentajes{
+    font-size: 36px;
+  }
+  .est1-p{
+    width: 287px;
+    font-size: 12px;
+    margin-left: 1%;
+    margin-bottom: 88px;
   }
 }
