--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -157,7 +157,7 @@ body{
     position: relative;
     width: 476px;
     top: 134px;
-    left: 101px;
+    left: 11%
   }
   
   .info-p-bloque-div{
